Refactored CMakeLists.txt; updated LICENSE.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,56 +1,85 @@
 cmake_minimum_required(VERSION 3.3)
+
+# Support legacy OS X versions
 set(CMAKE_OSX_DEPLOYMENT_TARGET "10.7" CACHE STRING "Minimum OS X deployment version")
 
 project("Rhubarb Lip Sync")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra")
-
-if("${CMAKE_GENERATOR}" STREQUAL "Xcode")
-	# Make sure Xcode uses libc++ instead of libstdc++, allowing us to use the C++11 standard library prior to OS X 10.9
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
-	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+# Enable C++14
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 endif()
 
+# Make sure Xcode uses libc++ instead of libstdc++, allowing us to use the C++14 standard library prior to OS X 10.9
+if("${CMAKE_GENERATOR}" STREQUAL "Xcode")
+	add_compile_options(-stdlib=libc++)
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")
+endif()
+
+# Set output directories
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
 
-# Find Boost libraries
+# Define flags variables for later use
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+	set(enableWarningsFlags "-Wall;-Wextra")
+	set(disableWarningsFlags "-w")
+elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+	set(enableWarningsFlags "/W4")
+	set(disableWarningsFlags "/W0")
+endif()
+
+# Define libraries
+
+# ... Boost
 set(Boost_USE_STATIC_LIBS ON) # Use static libs
 set(Boost_USE_MULTITHREADED ON) # Enable multithreading support
 set(Boost_USE_STATIC_RUNTIME ON) # Use static C++ runtime
 find_package(Boost REQUIRED COMPONENTS filesystem locale system)
-include_directories(${Boost_INCLUDE_DIRS})
+include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 
-set(SOURCE_FILES src/main.cpp src/audio_input/WaveFileReader.cpp src/audio_input/WaveFileReader.h src/audio_input/ChannelDownmixer.cpp src/audio_input/ChannelDownmixer.h src/audio_input/AudioStream.h src/audio_input/SampleRateConverter.cpp src/audio_input/SampleRateConverter.h src/audio_input/wave_file_writing.cpp src/audio_input/wave_file_writing.h src/audio_input/io_tools.h src/platform_tools.cpp src/platform_tools.h src/phone_extraction.cpp src/phone_extraction.h src/Phone.cpp src/Phone.h src/centiseconds.cpp src/centiseconds.h src/tools.cpp src/tools.h src/Shape.cpp src/Shape.h src/mouth_animation.cpp src/mouth_animation.h)
+# ... C++ Format
+include_directories(SYSTEM "lib/cppformat")
+FILE(GLOB cppFormatFiles "lib/cppformat/*.cc")
+add_library(cppFormat ${cppFormatFiles})
+target_compile_options(cppFormat PRIVATE ${disableWarningsFlags})
 
-include_directories("lib/sphinxbase-5prealpha-2015-08-05/include" "lib/pocketsphinx-5prealpha-2015-08-05/include" "lib/cppformat")
-FILE(GLOB_RECURSE SPHINX_BASE "lib/sphinxbase-5prealpha-2015-08-05/src/libsphinxbase/*.c")
-FILE(GLOB POCKETSPHINX "lib/pocketsphinx-5prealpha-2015-08-05/src/libpocketsphinx/*.c")
-FILE(GLOB CPPFORMAT "lib/cppformat/*.cc")
+# ... sphinxbase
+include_directories(SYSTEM "lib/sphinxbase-5prealpha-2015-08-05/include")
+FILE(GLOB_RECURSE sphinxbaseFiles "lib/sphinxbase-5prealpha-2015-08-05/src/libsphinxbase/*.c")
+add_library(sphinxbase ${sphinxbaseFiles})
+target_compile_options(sphinxbase PRIVATE ${disableWarningsFlags})
 
-add_executable(rhubarb ${SOURCE_FILES} ${SPHINX_BASE} ${POCKETSPHINX} ${CPPFORMAT})
-target_link_libraries(rhubarb ${Boost_LIBRARIES})
+# ... PocketSphinx
+include_directories(SYSTEM "lib/pocketsphinx-5prealpha-2015-08-05/include")
+FILE(GLOB pocketSphinxFiles "lib/pocketsphinx-5prealpha-2015-08-05/src/libpocketsphinx/*.c")
+add_library(pocketSphinx ${pocketSphinxFiles})
+target_link_libraries(pocketSphinx sphinxbase)
+target_compile_options(pocketSphinx PRIVATE ${disableWarningsFlags})
 
-function(copy_after_build sourceGlob relativeTargetDirectory)
-	# Set `sourcePaths`
-	file(GLOB sourcePaths "${sourceGlob}")
-	
-	foreach(sourcePath ${sourcePaths})
-		# Set `fileName`
-		get_filename_component(fileName "${sourcePath}" NAME)
-		
-		# Set `targetPath`
-		set(targetPath "${CMAKE_BINARY_DIR}/${relativeTargetDirectory}/${fileName}")
-		
-		add_custom_command(TARGET rhubarb POST_BUILD
-			COMMAND ${CMAKE_COMMAND} -E copy "${sourcePath}" "${targetPath}"
-			COMMENT "Creating '${relativeTargetDirectory}/${fileName}'"
-		)
-	endforeach()
-endfunction()
+# Define executable
+include_directories("src" "src/audio_input")
+set(SOURCE_FILES
+	src/main.cpp
+	src/Phone.cpp
+	src/Shape.cpp
+	src/centiseconds.cpp
+	src/mouth_animation.cpp
+	src/phone_extraction.cpp
+	src/platform_tools.cpp
+	src/tools.cpp
+	src/audio_input/ChannelDownmixer.cpp
+	src/audio_input/SampleRateConverter.cpp
+	src/audio_input/WaveFileReader.cpp
+	src/audio_input/wave_file_writing.cpp
+)
+add_executable(rhubarb ${SOURCE_FILES})
+target_link_libraries(rhubarb ${Boost_LIBRARIES} cppFormat sphinxbase pocketSphinx)
+target_compile_options(rhubarb PUBLIC ${enableWarningsFlags})
 
 # Copy resource files
+include(tools.cmake)
 set(modelDir "${CMAKE_SOURCE_DIR}/lib/pocketsphinx-5prealpha-2015-08-05/model")
 copy_after_build("${modelDir}/en-us/en-us-phone.lm.bin" "res/sphinx")
 copy_after_build("${modelDir}/en-us/en-us/*" "res/sphinx/acoustic_model")
