--- a/src/appInfo.cpp.in
+++ b/src/appInfo.cpp.in
@@ -1,4 +1,4 @@
-#include "app_info.h"
+#include "appInfo.h"
 
 const std::string appName = "@appName@";
 const std::string appVersion = "@appVersion@";
