Showing progress bar

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ set(SOURCE_FILES
 	src/stringTools.cpp
 	src/NiceCmdLineOutput.cpp
 	src/TablePrinter.cpp
+	src/ProgressBar.cpp
 )
 add_executable(rhubarb ${SOURCE_FILES})
 target_link_libraries(rhubarb ${Boost_LIBRARIES} cppFormat sphinxbase pocketSphinx)
