Suffixing OS X package file with '-OSX' instead of '-Darwin'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,9 @@ target_link_libraries(runTests gtest gmock gmock_main)
 
 set(CPACK_PACKAGE_NAME ${appName})
 string(REPLACE " " "-" CPACK_PACKAGE_NAME "${CPACK_PACKAGE_NAME}")
+if ("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
+	set(CPACK_SYSTEM_NAME "OSX")
+endif()
 set(CPACK_PACKAGE_VERSION_MAJOR ${appVersionMajor})
 set(CPACK_PACKAGE_VERSION_MINOR ${appVersionMinor})
 set(CPACK_PACKAGE_VERSION_PATCH ${appVersionPatch})
