--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,7 +97,7 @@ set(SOURCE_FILES
 	src/Phone.cpp src/Phone.h
 	src/Shape.cpp src/Shape.h
 	src/centiseconds.cpp src/centiseconds.h
-	src/enumTools.h
+	src/EnumConverter.h
 	src/mouthAnimation.cpp src/mouthAnimation.h
 	src/phoneExtraction.cpp src/phoneExtraction.h
 	src/platformTools.cpp src/platformTools.h
